@@ -1,7 +1,7 @@
 [project]
 name = "patool"
 version = "4.0.4"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = []
 # these values are set by setup.py
 dynamic = ["scripts", "authors", "keywords", "classifiers", "urls", "license", "readme", "description"]
@@ -34,23 +34,23 @@ dev = [
   "pytest-randomly==4.0.1",
 
   # for python code linting
-  "ruff==0.14.10",
+  "ruff==0.14.13",
 
   # for python type checking
-  "ty==0.0.5",
+  "ty==0.0.12",
 
   # for generating a Python .whl file
   "wheel==0.45.1",
 
   # for generating the web page
-  "sphinx==8.2.3",
-  "myst-parser==4.0.1",
+  "sphinx==9.1.0",
+  "myst-parser==5.0.0",
 
   # for upgrading the version number
   "bump2version==1.0.1",
 
   # for auditing github actions
-  "zizmor==1.19.0",
+  "zizmor==1.22.0",
 
   # for auditing python packages
   "pip-audit==2.10.0",
@@ -62,7 +62,7 @@ dev = [
 [tool.patool]
 # pin versions of Python and uv for development
 python_version_dev = "3.14.2"
-uv_version_dev = "0.9.18"
+uv_version_dev = "0.9.26"
 
 [tool.ty.environment]
 # patool uses some imports and attributes that are only available on windows
